--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-    <title>SuperStar Teen Patti | Play for free on Facebook, Android or iOS device</title>
+    <title>Casio Club | Play for free Android or iOS device</title>
     <meta name="description" content="Play SuperStar Teen Patti game for free with real players on Computer, laptop or Desktop (on Facebook) or Download on Android or IOS device" />
     <meta name="keywords" content="teen patti,SuperStar Teen Patti game,playing,download teen patti,android,free teen patti,teen patti facebook,teen patti iOS,multiplayer,real player,online teen patti" />
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
@@ -89,7 +89,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					</button>
-                            <a class="navbar-brand" href="/"><img src="images/logo.png" width="150" height="150" alt="Teen Patti"></a>
+                            <a class="navbar-brand" href="/"><img src="images/casiologo.png" width="150" height="150" alt="Teen Patti"></a>
                         </div>
                         <div class="navbar-collapse collapse Navbar_Menubar" id="landx-navigation">
                             <ul class="nav navbar-nav navbar-right main-navigation">
