--- a/teenpatti-rules.html
+++ b/teenpatti-rules.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-    <title>SuperStar Teen Patti | Check Teen Patti Rules and learn how to play the Indian Poker</title>
+    <title>Casio Club | Check Teen Patti Rules and learn how to play the Indian Poker</title>
     <meta name="description" content="SuperStar Teen Patti is an online mutliplayer highest rated teen patti game with players around the world. Read the rules and learn how to play teen patti or Indian poker" />
     <meta name="keywords" content="teen patti rules, how to play teen patti,Trail or set,three of same rank,Pure Sequence,run,Color,Pair,two cards of same rank,High Card,Seen Player,Side Show,three cards" />
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
@@ -73,7 +73,7 @@
         </div>
     </div>
 
-    <header id="teenpatti">
+       <header id="teenpatti">
         <!-- COLOR OVER IMAGE -->
         <div class="color-overlay">
             <div class="navigation-header">
@@ -89,49 +89,25 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					</button>
-                            <a class="navbar-brand" href="/"><img src="images/logo.png" width="150" height="150" alt="Teen Patti"></a>
+                            <a class="navbar-brand" href="/"><img src="images/casiologo.png" width="150" height="150" alt="Teen Patti"></a>
                         </div>
                         <div class="navbar-collapse collapse Navbar_Menubar" id="landx-navigation">
                             <ul class="nav navbar-nav navbar-right main-navigation">
                                 <li><a href="index.html" id="Home" title="Superstar Teen Patti">Home</a></li>
-                                <li><a href="teenpatti-features.html" id="Features" title="Superstar Teen Patti Features">Features</a></li>
+                                <!--<li><a href="teenpatti-features.html" id="Features" title="Superstar Teen Patti Features">Features</a></li>-->
                                 <!-- <li><a onclick="buy_chips_fb_check_offers()" style="cursor:hand;" id="Offers" title="Superstar Teen Patti Offers">Offers</a></li> -->
-                                <li><a onclick="check_session('offers')" style="cursor:hand;" id="Offers" title="Superstar Teen Patti Offers">Offers</a></li>
+                               <!-- <li><a onclick="check_session('offers')" style="cursor:hand;" id="Offers" title="Superstar Teen Patti Offers">Offers</a></li> -->
                                 <li><a href="teenpatti-rules.html" id="Rules" title="Superstar Teen Patti Rules">HOW TO PLAY</a></li>
-                                <li><a href="teenpatti-faq.html" id="faq" title="Superstar Teen Patti Faq">Faq</a></li>
-                                <li><a href="https://www.facebook.com/superstarteenpatti/" target="_blank" id="facebook" title="Superstar Teen Patti Facebook">Facebook</a></li>
-                                <li><a href="teenpatti-payment.html" id="payment" title="Superstar Teen Patti payment">How to pay</a></li>
+				<li><a href="teenpatti-faq.html" id="faq" title="Superstar Teen Patti Faq">About us</a></li>
+                                <!--<li><a href="teenpatti-faq.html" id="faq" title="Superstar Teen Patti Faq">Faq</a></li>-->
+                                <!--<li><a href="https://www.facebook.com/superstarteenpatti/" target="_blank" id="facebook" title="Superstar Teen Patti Facebook">Facebook</a></li>-->
+                                <!--<li><a href="teenpatti-payment.html" id="payment" title="Superstar Teen Patti payment">How to pay</a></li>-->
                                 <li><a href="teenpatti-contact.html" id="Contact" title="Superstar Teen Patti Contact">Contact</a></li>
                                 <!--  <li><a onclick="buy_chips_fb_check()" class="btn btn-default buy-chips" id="Account" title="Teen Patti Account">Buy Chips</a></li> -->
-                                <li><a onclick="check_session('buy_chips')" class="btn btn-default buy-chips" id="Account" title="Teen Patti Account">Buy Chips</a></li>
+                                <!--<li><a onclick="check_session('buy_chips')" class="btn btn-default buy-chips" id="Account" title="Teen Patti Account">Buy Chips</a></li> -->
                             </ul>
                             <div class="clear"></div>
-                            <div class="game_link_top">
-                                <!-- <span class="social_available">Available At</span> -->
-                                <div class="PlatformIconList_Main">
-                                    <div class="PlatformIconList">
-                                        <a href="https://apps.facebook.com/gameteenpatti/" target="_blank" class="game_link">
-                					<img src="images/Fbplay_new.png" width="50" height="50" alt="Teen Patti Facebook" title="Teen Patti Facebook">
-                				</a>
-                                    </div>
-                                    <div class="PlatformIconList">
-                                        <a href="https://itunes.apple.com/in/app/teen-patti-three-cards-poker/id824748752" target="_blank" class="game_link">
-                					<img src="images/btnappstore.png" width="50" height="50" alt="Teen Patti Ios" title="Teen Patti Ios">
-                				</a>
-                                    </div>
-                                    <div class="PlatformIconList">
-                                        <a href="https://play.google.com/store/apps/details?id=com.teenpattithreecardspoker" target="_blank" class="game_link">
-                					<img src="images/btnandroid.png" width="50" height="50" alt="Teen Patti Android" title="Teen Patti Android">
-                				</a>
-                                    </div>
-                                    <div class="PlatformIconList home_fb_login" style="display: none;">
-                                        <a href="javascript:;" target="_blank" class="game_link">
-                					<img src="images/Fblogin_new.png" width="50" height="50" alt="Teen Patti Android" title="Teen Patti Android">
-                				</a>
-                                    </div>
-                                </div>
-                                <div class="clear"></div>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
@@ -148,7 +124,7 @@
 </script> -->
     <section class="section5" id="teenpatti-rules">
         <div class="container">
-            <h2 title="teen patti Rules">SuperStar Teen Patti Rules</h2>
+            <h2 title="teen patti Rules">Casio Club Rules</h2>
             <div class="colored-line"></div>
             <div class="sub-heading" style="background:none;">Get quick and easy steps on how to play SuperStar Teen Patti.The figure below shows highest to lowest cards of each rank. It should be noted that in a <span class="strong">sequence A-K-Q</span> is the highest ranked sequence while <span class="strong">A-2-3</span>                is the second highest ranked sequence.SuperStar Teen Patti is a gambling card game that originated in India and became popular in Southeast Asia.</div>
             <div class="row">
@@ -182,7 +158,7 @@
                         </div>
                         <div class="rules_description">
                             <div class="rules_description_info">
-                                <h3 title="Playing Teen Patti">Playing SuperStar Teen Patti.</h3>
+                                <h3 title="Playing Teen Patti">Playing Casio Club.</h3>
                                 <p>Each player contributes the boot money and gets three cards facedown. Now it is the turn of the player next to the dealer in clockwise direction. The user has option to place a bet without seeing the cards (blind) or see
                                     the card. When the user sees his card, he/she can play chaal or may have other options depending upon the progress of the games. A player who places a blind bet is referred to as the blind user. A player who places
                                     his bet after seeing the cards is referred to as the seen player.</p>
@@ -204,11 +180,11 @@
         </div>
         <!-- /END CONTAINER -->
     </section>
-    <footer class="bgcolor-2 header_bg_color">
+<footer class="bgcolor-2 header_bg_color">
         <div class="container">
 
             <div class="footer_bottom">
-                <div class="footer-logo footer_logo_bar"><a href="/"><img src="images/logo.png" width="100" height="100" alt="Teen Patti"></a></div>
+                <div class="footer-logo footer_logo_bar"><a href="/"><img src="images/casiologo.png" width="100" height="100" alt="Teen Patti"></a></div>
                 <div class="facebook_like_btn">
                     <div class="fb-like" data-href="https://www.facebook.com/superstarteenpatti" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
                 </div>
@@ -216,17 +192,17 @@
 
                 <div class="legal_info footer_legal_bar">
 
-                    <a href="teenpatti-aboutus.html" title="Superstar Teen Patti About us"> About us</a> |
-                    <a href="teenpatti-features.html" title="Superstar Teen Patti Features"> Features</a> |
+                    <a href="teenpatti-aboutus.html" title="Casio Club About us"> About us</a> |
+                    <!--<a href="teenpatti-features.html" title="Superstar Teen Patti Features"> Features</a> |
                     <a href="teenpatti-offers.html" title="Superstar Teen Patti Offers"> Offers</a> |
                     <a href="teenpatti-rules.html" title="Superstar Teen Patti Rules"> Rules</a> |
                     <a href="teenpatti-faq.html" title="Superstar teen patti Faq">FAQ</a> |
-                    <a href="teenpatti-payment.html" title="Superstar teen patti payment">How to pay</a> |
+                    <a href="teenpatti-payment.html" title="Superstar teen patti payment">How to pay</a> |-->
                     <a href="teenpatti-refundpolicy.html" title="Superstar Teen Patti Refund Policy">Refund Policy</a> |
-                    <a href="teenpatti-contact.html" target="_blank" title="Superstar Teen Patti Contact"> Contact</a>|
+                    <!--<a href="teenpatti-contact.html" target="_blank" title="Superstar Teen Patti Contact"> Contact</a>|-->
                     <a href="privacy-policy.html" title="Superstar Teen Patti Privacy Policy">Privacy Policy</a> |
                     <a href="terms-of-service.html" title="Superstar Teen Patti Terms and Conditions">Terms and Conditions</a>|
-                    <a href="paywith-paytm.html" target="_blank" title="Superstar Teen Patti Payment"> Pay With Paytm</a>
+                    <!--<a href="paywith-paytm.html" target="_blank" title="Superstar Teen Patti Payment"> Pay With Paytm</a>-->
 
 
                 </div>
@@ -251,15 +227,14 @@
                     </li>
                 </ul>
                 <div class="clear"></div>
-                <div class="copyright" title=""> SuperStar Teen Patti Pals Copyright ©<span id="spanYear"></span>.</div>
+                <div class="copyright" title=""> Casio Club Copyright ©<span id="spanYear"></span>.</div>
             </div>
         </div>
     </footer>
-
     <div class="mobile_game_link">
         <div class="mobile_game_link_inner">
             <div class="mobile_btm_logo">
-                <img src="images/logo.png" width="50" height="50" alt="Teen Patti" />
+                <img src="images/casiologo.png" width="50" height="50" alt="Teen Patti" />
             </div>
             <div class="mobile_btm_link">
                 <a href="" class="link_btm_button">
