--- a/teenpatti-contact.html
+++ b/teenpatti-contact.html
@@ -89,49 +89,26 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					</button>
-                            <a class="navbar-brand" href="/"><img src="images/logo.png" width="150" height="150" alt="Teen Patti"></a>
+                            <a class="navbar-brand" href="/"><img src="images/casiologo.png" width="150" height="150" alt="Teen Patti"></a>
                         </div>
                         <div class="navbar-collapse collapse Navbar_Menubar" id="landx-navigation">
                             <ul class="nav navbar-nav navbar-right main-navigation">
-                                <li><a href="index.html" id="Home" title="Superstar Teen Patti">Home</a></li>
-                                <li><a href="teenpatti-features.html" id="Features" title="Superstar Teen Patti Features">Features</a></li>
+                                <li><a href="index.html" id="Home" title="Casio club">Home</a></li>
+                                <!--<li><a href="teenpatti-features.html" id="Features" title="Superstar Teen Patti Features">Features</a></li>-->
                                 <!-- <li><a onclick="buy_chips_fb_check_offers()" style="cursor:hand;" id="Offers" title="Superstar Teen Patti Offers">Offers</a></li> -->
-                                <li><a onclick="check_session('offers')" style="cursor:hand;" id="Offers" title="Superstar Teen Patti Offers">Offers</a></li>
-                                <li><a href="teenpatti-rules.html" id="Rules" title="Superstar Teen Patti Rules">HOW TO PLAY</a></li>
-                                <li><a href="teenpatti-faq.html" id="faq" title="Superstar Teen Patti Faq">Faq</a></li>
-                                <li><a href="https://www.facebook.com/superstarteenpatti/" target="_blank" id="facebook" title="Superstar Teen Patti Facebook">Facebook</a></li>
-                                <li><a href="teenpatti-payment.html" id="payment" title="Superstar Teen Patti payment">How to pay</a></li>
-                                <li><a href="teenpatti-contact.html" id="Contact" title="Superstar Teen Patti Contact">Contact</a></li>
+                               <!-- <li><a onclick="check_session('offers')" style="cursor:hand;" id="Offers" title="Superstar Teen Patti Offers">Offers</a></li> -->
+                                <li><a href="teenpatti-rules.html" id="Rules" title="Casio Club Rules">HOW TO PLAY</a></li>
+				<li> <a href="teenpatti-aboutus.html" title="Casio Club About us"> About us</a></li>
+                                <!--<li><a href="teenpatti-faq.html" id="faq" title="Superstar Teen Patti Faq">Faq</a></li>-->
+                                <!--<li><a href="https://www.facebook.com/superstarteenpatti/" target="_blank" id="facebook" title="Superstar Teen Patti Facebook">Facebook</a></li>-->
+                                <!--<li><a href="teenpatti-payment.html" id="payment" title="Superstar Teen Patti payment">How to pay</a></li>-->
+                                <li><a href="teenpatti-contact.html" id="Contact" title="casio club Contact">Contact</a></li>
                                 <!--  <li><a onclick="buy_chips_fb_check()" class="btn btn-default buy-chips" id="Account" title="Teen Patti Account">Buy Chips</a></li> -->
-                                <li><a onclick="check_session('buy_chips')" class="btn btn-default buy-chips" id="Account" title="Teen Patti Account">Buy Chips</a></li>
+                                <!--<li><a onclick="check_session('buy_chips')" class="btn btn-default buy-chips" id="Account" title="Teen Patti Account">Buy Chips</a></li> -->
                             </ul>
                             <div class="clear"></div>
-                            <div class="game_link_top">
-                                <!-- <span class="social_available">Available At</span> -->
-                                <div class="PlatformIconList_Main">
-                                    <div class="PlatformIconList">
-                                        <a href="https://apps.facebook.com/gameteenpatti/" target="_blank" class="game_link">
-                					<img src="images/Fbplay_new.png" width="50" height="50" alt="Teen Patti Facebook" title="Teen Patti Facebook">
-                				</a>
-                                    </div>
-                                    <div class="PlatformIconList">
-                                        <a href="https://itunes.apple.com/in/app/teen-patti-three-cards-poker/id824748752" target="_blank" class="game_link">
-                					<img src="images/btnappstore.png" width="50" height="50" alt="Teen Patti Ios" title="Teen Patti Ios">
-                				</a>
-                                    </div>
-                                    <div class="PlatformIconList">
-                                        <a href="https://play.google.com/store/apps/details?id=com.teenpattithreecardspoker" target="_blank" class="game_link">
-                					<img src="images/btnandroid.png" width="50" height="50" alt="Teen Patti Android" title="Teen Patti Android">
-                				</a>
-                                    </div>
-                                    <div class="PlatformIconList home_fb_login" style="display: none;">
-                                        <a href="javascript:;" target="_blank" class="game_link">
-                					<img src="images/Fblogin_new.png" width="50" height="50" alt="Teen Patti Android" title="Teen Patti Android">
-                				</a>
-                                    </div>
-                                </div>
-                                <div class="clear"></div>
-                            </div>
+                            
+                            
                         </div>
                     </div>
                 </div>
@@ -189,11 +166,11 @@
         <!-- /END CONTAINER -->
 
     </section>
-    <footer class="bgcolor-2 header_bg_color">
+      <footer class="bgcolor-2 header_bg_color">
         <div class="container">
 
             <div class="footer_bottom">
-                <div class="footer-logo footer_logo_bar"><a href="/"><img src="images/logo.png" width="100" height="100" alt="Teen Patti"></a></div>
+                <div class="footer-logo footer_logo_bar"><a href="/"><img src="images/casiologo.png" width="100" height="100" alt="Teen Patti"></a></div>
                 <div class="facebook_like_btn">
                     <div class="fb-like" data-href="https://www.facebook.com/superstarteenpatti" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
                 </div>
@@ -201,17 +178,17 @@
 
                 <div class="legal_info footer_legal_bar">
 
-                    <a href="teenpatti-aboutus.html" title="Superstar Teen Patti About us"> About us</a> |
-                    <a href="teenpatti-features.html" title="Superstar Teen Patti Features"> Features</a> |
+                    <a href="teenpatti-aboutus.html" title="Casio Club About us"> About us</a> |
+                    <!--<a href="teenpatti-features.html" title="Superstar Teen Patti Features"> Features</a> |
                     <a href="teenpatti-offers.html" title="Superstar Teen Patti Offers"> Offers</a> |
                     <a href="teenpatti-rules.html" title="Superstar Teen Patti Rules"> Rules</a> |
                     <a href="teenpatti-faq.html" title="Superstar teen patti Faq">FAQ</a> |
-                    <a href="teenpatti-payment.html" title="Superstar teen patti payment">How to pay</a> |
+                    <a href="teenpatti-payment.html" title="Superstar teen patti payment">How to pay</a> |-->
                     <a href="teenpatti-refundpolicy.html" title="Superstar Teen Patti Refund Policy">Refund Policy</a> |
-                    <a href="teenpatti-contact.html" target="_blank" title="Superstar Teen Patti Contact"> Contact</a>|
+                    <!--<a href="teenpatti-contact.html" target="_blank" title="Superstar Teen Patti Contact"> Contact</a>|-->
                     <a href="privacy-policy.html" title="Superstar Teen Patti Privacy Policy">Privacy Policy</a> |
                     <a href="terms-of-service.html" title="Superstar Teen Patti Terms and Conditions">Terms and Conditions</a>|
-                    <a href="paywith-paytm.html" target="_blank" title="Superstar Teen Patti Payment"> Pay With Paytm</a>
+                    <!--<a href="paywith-paytm.html" target="_blank" title="Superstar Teen Patti Payment"> Pay With Paytm</a>-->
 
 
                 </div>
@@ -236,7 +213,7 @@
                     </li>
                 </ul>
                 <div class="clear"></div>
-                <div class="copyright" title=""> SuperStar Teen Patti Pals Copyright ©<span id="spanYear"></span>.</div>
+                <div class="copyright" title=""> Casio Club Copyright ©<span id="spanYear"></span>.</div>
             </div>
         </div>
     </footer>
@@ -244,7 +221,7 @@
     <div class="mobile_game_link">
         <div class="mobile_game_link_inner">
             <div class="mobile_btm_logo">
-                <img src="images/logo.png" width="50" height="50" alt="Teen Patti" />
+                <img src="images/casiologo.png" width="50" height="50" alt="Teen Patti" />
             </div>
             <div class="mobile_btm_link">
                 <a href="" class="link_btm_button">
