--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
                         </div>
                         <div class="navbar-collapse collapse Navbar_Menubar" id="landx-navigation">
                             <ul class="nav navbar-nav navbar-right main-navigation">
-                                <li><a href="index.html" id="Home" title="Superstar Teen Patti">Home</a></li>
+                                <li><a href="index.html" id="Home" title="Casio club">Home</a></li>
                                 <!--<li><a href="teenpatti-features.html" id="Features" title="Superstar Teen Patti Features">Features</a></li>-->
                                 <!-- <li><a onclick="buy_chips_fb_check_offers()" style="cursor:hand;" id="Offers" title="Superstar Teen Patti Offers">Offers</a></li> -->
                                <!-- <li><a onclick="check_session('offers')" style="cursor:hand;" id="Offers" title="Superstar Teen Patti Offers">Offers</a></li> -->
-                                <li><a href="teenpatti-rules.html" id="Rules" title="Superstar Teen Patti Rules">HOW TO PLAY</a></li>
-				<li><a href="teenpatti-faq.html" id="faq" title="Superstar Teen Patti Faq">About us</a></li>
+                                <li><a href="teenpatti-rules.html" id="Rules" title="Casio Club Rules">HOW TO PLAY</a></li>
+				<li> <a href="teenpatti-aboutus.html" title="Casio Club About us"> About us</a></li>
                                 <!--<li><a href="teenpatti-faq.html" id="faq" title="Superstar Teen Patti Faq">Faq</a></li>-->
                                 <!--<li><a href="https://www.facebook.com/superstarteenpatti/" target="_blank" id="facebook" title="Superstar Teen Patti Facebook">Facebook</a></li>-->
                                 <!--<li><a href="teenpatti-payment.html" id="payment" title="Superstar Teen Patti payment">How to pay</a></li>-->
-                                <li><a href="teenpatti-contact.html" id="Contact" title="Superstar Teen Patti Contact">Contact</a></li>
+                                <li><a href="teenpatti-contact.html" id="Contact" title="casio club Contact">Contact</a></li>
                                 <!--  <li><a onclick="buy_chips_fb_check()" class="btn btn-default buy-chips" id="Account" title="Teen Patti Account">Buy Chips</a></li> -->
                                 <!--<li><a onclick="check_session('buy_chips')" class="btn btn-default buy-chips" id="Account" title="Teen Patti Account">Buy Chips</a></li> -->
                             </ul>
@@ -130,15 +130,10 @@
             </div>
             <div class="outer_home_banner_video">
                 <div class="home_banner_video">
-                    <div id="home_banner">
-                        <!--<iframe id="home_banner_frame" class="video_groups" width="100%" height="650" src="https://www.youtube.com/embed/llnxNv27jRY?rel=0&autoplay=1&loop=1&playlist=llnxNv27jRY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>-->
-			    <!--<video width="100%" height="100%" controls controlsList="nodownload nofullscreen">
-				<source src="images/store_video final final final.mp4" type="video/mp4">
-			</video> -->
-			 <div style=" text-align: center;"><h1 style=" text-align: center;">Download Teen Patti App</h1>
+                   
+			<div style=" text-align: center;"><h1 style=" text-align: center;">Download Teen Patti App</h1>
 			     <a href="https://casioclub.in/casioclub.apk"><h2 style=" text-align: center;">Download Here</h2></a>
 			    </div>
-                    </div>
                 </div>
             </div>
             <!-- <div class="MainBannerSec">
