--- a/teenpatti-rules.html
+++ b/teenpatti-rules.html
@@ -98,7 +98,7 @@
                                 <!-- <li><a onclick="buy_chips_fb_check_offers()" style="cursor:hand;" id="Offers" title="Superstar Teen Patti Offers">Offers</a></li> -->
                                <!-- <li><a onclick="check_session('offers')" style="cursor:hand;" id="Offers" title="Superstar Teen Patti Offers">Offers</a></li> -->
                                 <li><a href="teenpatti-rules.html" id="Rules" title="Superstar Teen Patti Rules">HOW TO PLAY</a></li>
-				<li><a href="teenpatti-faq.html" id="faq" title="Superstar Teen Patti Faq">About us</a></li>
+				<li><a href="teenpatti-aboutus.html" id="faq" title="Superstar Teen Patti Faq">About us</a></li>
                                 <!--<li><a href="teenpatti-faq.html" id="faq" title="Superstar Teen Patti Faq">Faq</a></li>-->
                                 <!--<li><a href="https://www.facebook.com/superstarteenpatti/" target="_blank" id="facebook" title="Superstar Teen Patti Facebook">Facebook</a></li>-->
                                 <!--<li><a href="teenpatti-payment.html" id="payment" title="Superstar Teen Patti payment">How to pay</a></li>-->
