--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 		
             <div class="abc">
                         
-                            <div style=" text-align: center;"><h1 style=" text-align: center;">Download Teen Patti App</h1>
-			     <a href="https://casioclub.in/casioclub.apk"><h2 style=" text-align: center;">Download Here</h2></a>
+                            <div style=" text-align: center;"><h1 style=" text-align: center;"><mark>Download Teen Patti App</mark></h1>
+			     <a href="https://casioclub.in/casioclub.apk"><h2 style=" text-align: center;"><mark>Download Here<mark></h2></a>
 			    </div>
                          
                     </div>
