--- a/index.html
+++ b/index.html
@@ -311,38 +311,38 @@
    <!-- </section>-->
     <section class="section6 bgcolor-2" id="teenpatti-screenshots">
         <div class="container">
-            <h2 title="teen patti Screenshots">Casio Club Screenshots</h2>
+            <h2 title="Casio Club Screenshots">Casio Club Screenshots</h2>
             <div class="colored-line"></div>
             <div class="row screenshots">
                 <div id="screenshots" class="owl-carousel owl-theme">
                     <div class="shot">
-                        <a href="images/screen_short_n_01.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/screen_short_ns_01.jpg" width="480" height="270" alt="teen patti Hukum Table"></a>
+                        <a href="images/screen_short_n_01.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/1.jpg" width="480" height="270" alt="teen patti Hukum Table"></a>
                     </div>
                     <div class="shot">
-                        <a href="images/screen_short_n_02.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/screen_short_ns_02.jpg" width="480" height="270" alt="teen patti weekly contest"></a>
+                        <a href="images/screen_short_n_02.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/2.jpg" width="480" height="270" alt="teen patti weekly contest"></a>
                     </div>
                     <div class="shot">
-                        <a href="images/screen_short_n_03.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/screen_short_ns_03.jpg" width="480" height="270" alt="teen patti smoothly works"></a>
+                        <a href="images/screen_short_n_03.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/3.jpg" width="480" height="270" alt="teen patti smoothly works"></a>
                     </div>
                     <div class="shot">
-                        <a href="images/screen_short_n_04.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/screen_short_ns_04.jpg" width="480" height="270" alt="teen patti classic table"></a>
+                        <a href="images/screen_short_n_04.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/4.jpg" width="480" height="270" alt="teen patti classic table"></a>
                     </div>
                     <div class="shot">
-                        <a href="images/screen_short_n_05.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/screen_short_ns_05.jpg" width="480" height="270" alt="playing teen patti"></a>
+                        <a href="images/screen_short_n_05.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/5.jpg" width="480" height="270" alt="playing teen patti"></a>
                     </div>
                     <div class="shot">
-                        <a href="images/screen_short_n_06.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/screen_short_ns_06.jpg" width="480" height="270" alt="playing teen patti"></a>
+                        <a href="images/screen_short_n_06.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/6.jpg" width="480" height="270" alt="playing teen patti"></a>
                     </div>
                     <div class="shot">
-                        <a href="images/screen_short_n_07.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/screen_short_ns_07.jpg" width="480" height="270" alt="playing teen patti"></a>
+                        <a href="images/screen_short_n_07.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/7.jpg" width="480" height="270" alt="playing teen patti"></a>
                     </div>
                     <div class="shot">
-                        <a href="images/screen_short_n_08.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/screen_short_ns_08.jpg" width="480" height="270" alt="playing teen patti"></a>
+                        <a href="images/screen_short_n_08.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/8.jpg" width="480" height="270" alt="playing teen patti"></a>
                     </div>
-                    <!-- <div class="shot">
-				<a href="images/screen_short_ns_09.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/screen_short_ns_09.jpg" width="480" height="270" alt="playing teen patti"></a>
+                    <div class="shot">
+				<a href="images/screen_short_ns_09.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/9.jpg" width="480" height="270" alt="playing teen patti"></a>
 			</div>
-			<div class="shot">
+			<!--<div class="shot">
 				<a href="images/screen_short_ns_10.jpg" data-lightbox-gallery="screenshots-gallery"><img src="images/screen_short_ns_10.jpg" width="480" height="270" alt="playing teen patti"></a>
 			</div> -->
                     <!-- <div class="shot">
