--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="intro_text_head">
+                    <div class="intro_text_head text-justify">
                         <h2 title="About SuperStar Teen Patti Game">Casio Club Games</h2>
                         <p>Casio Club is a best app for casino games where you will earn while playing games. </p>
 			    <p>There are two games in the Casio Club application that are Roulette and Teen Patti. </p>
