--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
     </div>
 
-    <header id="teenpatti" style="height: 400px;">
+    <header id="teenpatti">
         <!-- COLOR OVER IMAGE -->
         <div class="color-overlay">
             <div class="navigation-header">
